Updates to gallery part of site

--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,73 @@
         <link rel="stylesheet" href="gallery.css">
     </head>
     <body>
-        <script src="" async defer></script>
+        <div class="overlay" onclick="closeZoom()"></div>
+        <div class="something">
+            <h1>IshiBey Wrapped</h1>
+            <h2>(But not in chronological order)</h2>
+            <h3>TBU - To Be Updated</32>
+        </div>
+        <div class="all-pics">
+            <div class="pic-row">
+                <div class="pic-cont" onclick="zoomImage(this)">
+                    <div class="pic-inner">
+                        <img class="front" src="images-gallery/polaroids/1.png">
+                        <img class="back" src="images-gallery/polaroids/1 back.png">
+                    </div>
+                </div>
+                <div class="pic-cont" onclick="zoomImage(this)">
+                    <div class="pic-inner">
+                        <img class="front" src="images-gallery/polaroids/2.png">
+                        <img class="back" src="images-gallery/polaroids/2 back.png">
+                    </div>
+                </div>
+                <div class="pic-cont" onclick="zoomImage(this)">
+                    <div class="pic-inner">
+                        <img class="front" src="images-gallery/polaroids/3.png">
+                        <img class="back" src="images-gallery/polaroids/3 back.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pic-row">
+                <div class="pic-cont" onclick="zoomImage(this)">
+                    <div class="pic-inner">
+                        <img class="front" src="images-gallery/polaroids/4.png">
+                        <img class="back" src="images-gallery/polaroids/4 back.png">
+                    </div>
+                </div>
+                <div class="pic-cont" onclick="zoomImage(this)">
+                    <div class="pic-inner">
+                        <img class="front" src="images-gallery/polaroids/5.png">
+                        <img class="back" src="images-gallery/polaroids/5 back.png">
+                    </div>
+                </div>
+                <div class="pic-cont" onclick="zoomImage(this)">
+                    <div class="pic-inner">
+                        <img class="front" src="images-gallery/polaroids/6.png">
+                        <img class="back" src="images-gallery/polaroids/6 back.png">
+                    </div>
+                </div>
+            </div>
+            <div class="pic-row">
+                <div class="pic-cont" onclick="zoomImage(this)">
+                    <div class="pic-inner">
+                        <img class="front" src="images-gallery/polaroids/7.png">
+                        <img class="back" src="images-gallery/polaroids/7 back.png">
+                    </div>
+                </div>
+                <div class="pic-cont" onclick="zoomImage(this)">
+                    <div class="pic-inner">
+                        <img class="front" src="images-gallery/polaroids/8.png">
+                        <img class="back" src="images-gallery/polaroids/8 back.png">
+                    </div>
+                </div>
+                <div class="pic-cont" onclick="zoomImage(this)">
+                    <div class="pic-inner">
+                        <img class="front" src="images-gallery/polaroids/9.png">
+                        <img class="back" src="images-gallery/polaroids/9 back.png">
+                    </div>
+                </div>
+            </div>
+        <script src="gallery.js" async defer></script>
     </body>
 </html>
