--- a/gallery.html
+++ b/gallery.html
@@ -7,9 +7,19 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="gallery.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="overlay" onclick="closeZoom()"></div>
+
+        <div class = "header">
+            <ul class="left">
+                <li><a href = index.html>Home</a></li>
+                <li><a href = gallery.html>Gallery</a></li>
+                <li><a href = gallery.html>Contact Me</a></li>
+            </ul>
+        </div>
+
         <div class="something">
             <h1>IshiBey Wrapped</h1>
             <h2>(But not in chronological order)</h2>
